Fix image sizing on Safari

--- a/src/assets/scss/theme/sections/_features-tiles.scss
+++ b/src/assets/scss/theme/sections/_features-tiles.scss
@@ -21,5 +21,9 @@
 		margin-left: 10px;
 		display: unset;
 	}
+	.bio-photo {
+		width: 180px !important;
+		height: 180px !important;
+	}
 }
 
